<resources>
    <string name="app_name">InteractOut</string>
    <string name="accessibility_service_description">Accessibility service is an essential part of this app.</string>
    <string name="disable">Disable</string>
    <string name="tap_to_1">Tap to +1</string>
    <string name="revert_swipe_direction">Reverse Swipe Direction</string>
    <string name="tap_delay">Tap Delay</string>
    <string name="more_out_of_the_phone">More out of the phone</string>
    <string name="scroll_ratio">Scroll Ratio</string>
    <string name="fingers_to_swipe">Fingers to Swipe</string>
    <string name="long_press_prolong">Long Press Prolong</string>
    <string name="tap_threshold">Tap Threshold</string>
    <string name="activate_disabling_window">Activate Disabling Window</string>
    <string name="textview">TextView</string>
    <string name="double_tap_to_activate">Double Tap to Activate</string>
    <string name="go_to_settings">Customize Settings</string>
    <string name="question_1"><b>1. </b>I find this intervention annoying while I’m using the app. </string>
    <string name="question_2"><b>2. </b>I find this intervention disruptive to my experience using the app.</string>
    <string name="question_3"><b>3. </b>This intervention lowers my desire to continue using the app.</string>
    <string name="question_4"><b>4. </b>I find this intervention mentally demanding for me to use the app.</string>
    <string name="question_5"><b>5. </b>I find this intervention physically harder for me to use the app.</string>
    <string name="survey_description">Based on your experience in the last 3 minutes, please rate the following three questions from 1 to 7, where 1 is <b>strongly disagree</b>, 2 is <b>disagree</b>, 3 is <b>somewhat disagree</b>, 4 is <b>neither agree nor disagree</b>, 5 is <b>somewhat agree</b>, 6 is <b>agree</b> and 7 is <b>strong agree</b>.</string>
    <string name="question_6"><b>6. </b>Now you have experienced the two levels of %1$s. Please select which one you probably use in your daily life to help you reduce smartphone usage. (Consider the balance between effectiveness and annoyance)</string>
    <string name="interactout"><b>InteractOut:</b> Less interaction and out of the phone!</string>
    <string name="time_setting_instruction">Please set the time limit for:</string>
</resources>