<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/more_out_of_the_phone"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/disable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tap_to_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Switch
        android:id="@+id/swipeDirectionSwtch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:text="@string/revert_swipe_direction"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/tapDelayBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/swipeFingersBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tap_delay"
        app:layout_constraintBottom_toTopOf="@+id/tapDelayBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tapDelayDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tapDelayBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/disableAreaSwitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:minHeight="48dp"
        android:text="Activate Disabling Window"
        app:layout_constraintBottom_toTopOf="@+id/swipeDirectionSwtch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/scrollRatioBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:max="8"
        android:progress="4"
        app:layout_constraintBottom_toTopOf="@+id/tapDelayBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scrollRatio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/scroll_ratio"
        app:layout_constraintBottom_toTopOf="@+id/scrollRatioBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/scrollRatioDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollRatioBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/swipeFingersBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:max="4"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/tapThresholdBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/swipeFingers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="@string/fingers_to_swipe"
        app:layout_constraintBottom_toTopOf="@+id/swipeFingersBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/swipeFingerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/swipeFingersBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/tapThresholdBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:max="500"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/longPressProlongBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/longPressProlongBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        android:max="1000"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/disableAreaSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tapThreshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="Tap Threshold"
        app:layout_constraintBottom_toTopOf="@+id/tapThresholdBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/longPressProlong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="10dp"
        android:text="Long Press Prolong"
        app:layout_constraintBottom_toTopOf="@+id/longPressProlongBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tapThresholdDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tapThresholdBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/longPressProlongDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/longPressProlongBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/prolongDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>